src/tests/errors/lexing/test09.cmp
program main 
begin
   var x := "a
               "  (* A newline is not allowed *)
end 